2018-01-04         Arnold D. Robbins     <arnold@skeeve.com>

	Thanks to Andrew Schorr for the basics of this test.

	* Makefile.am (pty2): New test. 
	* pty2.awk, pty2.ok: New files.

2018-01-02         Arnold D. Robbins     <arnold@skeeve.com>

	Thanks to Nethox <nethox@gmail.com> for this test.

	* Makefile.am (mpfrrndeval): New test. 
	* mpfrrndeval.awk, mpfrrndeval.ok: New files.

2017-12-28         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add numstr1 files.
	* numstr1.awk, numstr1.ok: New files.

2017-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add new tests setrec0 and setrec1.
	(BASIC_TESTS): Add setrec0 and setrec1.
	* setrec0.awk, setrec0.in, setrec0.ok: New files.
	* setrec1.awk, setrec1.ok: New files.

2017-11-10         Arnold D. Robbins     <arnold@skeeve.com>

	* badargs.ok: Updated after code change.

2017-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.0: Release tar ball made.

2017-10-17         Arnold D. Robbins     <arnold@skeeve.com>

	* forcenum.awk: Convert values manually to number and then
	to string and remove leading sign, to avoid C library
	differences across platforms. Thanks to Corinna Vinschen
	for the report.
	* forcenum.ok: Adjust for above change.

2017-10-12         Arnold D. Robbins     <arnold@skeeve.com>

	* fork.awk: Close the file in the parent after reading it.
	* fork2.awk: Ditto.

2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (randtest): Minor fix from Andreas for OS/2.

2017-09-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (nonfatal1): New rule with postprocessing to remove
	the platform-specific portion of the error message.
	* nonfatal1.ok: Remove the platform-specific portion of the error
	message.

2017-09-12         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readdir): Add to message that test can fail on