@@ -1,3 +1,10 @@
+2018-01-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (nlstringtest): New test.
+	* nlstringtest.awk, nlstringtest.ok, fr/LC_MESSAGES/nlstringtest.mo:
+	New files. Thanks to Bruno Haible <bruno@clisp.org>
+	for the test.
+
 2018-01-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Thanks to Andrew Schorr for the basics of this test.
